# 2026worldCupCoverage

./: .gitignore  LICENSE  README.md  render.yaml  requirements.txt
2026worldCupCoverage/: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
2026worldCupCoverage/data/: details.json  matches.json
2026worldCupCoverage/docs/: index.md
2026worldCupCoverage/docs/architecture/: README.md
2026worldCupCoverage/docs/backlog/: README.md
2026worldCupCoverage/docs/context/: README.md  ai-autonomy-policy.md  conventions.md
2026worldCupCoverage/docs/logs/2026/: 06-12.md
2026worldCupCoverage/docs/maintenance/: match-details.md
2026worldCupCoverage/docs/plans/: 001-initial-skeleton.md  004-flags-and-country-names.md  008-left-right-symmetric.md  009-detail-modal.md  012-worldcup26-api-integration.md
2026worldCupCoverage/docs/requirements/: 2026-06-12-wc-coverage-app.md
2026worldCupCoverage/src/: app.py
2026worldCupCoverage/src/data/: __init__.py  bracket_pairings.py  countries.py  details.py  ics_parser.py
2026worldCupCoverage/src/static/css/: main.css
2026worldCupCoverage/src/static/js/: main.js
2026worldCupCoverage/src/templates/: index.html
2026worldCupCoverage/tests/: test_app.py  test_bracket_pairings.py  test_details.py  test_launch.py  test_worldcup_api.py
2026worldCupCoverage/tests/e2e/: conftest.py  test_auto_status.py  test_bracket_visual.py  test_match_details.py  test_modal.py
2026worldCupCoverage/tests/fixtures/: wc2026-sample.ics
data/: countries.json  details.json  matches.json  qualification_cache.json  (+1 more)
docs/: index.md
(+110 files in other folders)
