[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wc2026-coverage"
version = "0.1.0"
description = "Desktop World Cup 2026 dashboard"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0",
    "icalendar>=5.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
